Fix screen bleeding

--- a/Desktop/javaScript/asteroids2/css/asteroids.css
+++ b/Desktop/javaScript/asteroids2/css/asteroids.css
@@ -3,3 +3,12 @@
 	left: 20%;
 	top: 100px;
 }
+
+* { 
+margin: 0;
+padding: 0;
+}
+
+body { 
+overflow:hidden; 
+}
